frame/support/test/tests/pallet_ui/step_001.stderr
error[E0658]: non-inline modules in proc macro input are unstable
 --> $DIR/step_001.rs:2:1
  |
2 | mod foo;
  | ^^^^^^^^
  |
  = note: see issue #54727 <https://github.com/rust-lang/rust/issues/54727> for more information

error: Invalid pallet macro call: expect `#[frame_support::pallet($IDENT)]`
 --> $DIR/step_001.rs:1:1
  |
1 | #[frame_support::pallet]
  | ^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in an attribute macro (in Nightly builds, run with -Z macro-backtrace for more info)

error: unexpected end of input, expected identifier
 --> $DIR/step_001.rs:1:1
  |
1 | #[frame_support::pallet]
  | ^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in an attribute macro (in Nightly builds, run with -Z macro-backtrace for more info)
